--- a/OnlineShop2022/Areas/Admin/Views/Category/Create.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/Category/Create.cshtml
@@ -8,6 +8,10 @@
 
 <h4>CategoryModel</h4>
 <hr />
+@if(ViewData["CategoryCreate"] != null)
+{
+    <div class="alert alert-danger">@ViewData["CategoryCreate"]</div>
+}
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
