Role-Specific Menus Test
• Added New Selenium Test to check only authorised users can access menus requiring certain roles

• Added New Method to authomatically log in a user with certain credentials, based on the passed role

• Added Id to relevant component(s) in OnlineShop application so they can be referenced by Selenium

• New Test fails, fix to be implemented

--- a/OnlineShop2022/Views/Shared/Components/ManagerMenu/Default.cshtml
+++ b/OnlineShop2022/Views/Shared/Components/ManagerMenu/Default.cshtml
@@ -8,7 +8,7 @@
         @foreach(var item in Model)
         {
             <li>
-                <a asp-area="Admin" asp-controller="@item.ControllerValue" asp-action="Index" class="dropdown-item">@item.DisplayValue</a>
+                <a asp-area="Admin" asp-controller="@item.ControllerValue" asp-action="Index" class="dropdown-item" id="managerLink">@item.DisplayValue</a>
             </li>
         }
     </ul>
