--- a/OnlineShop2022/Views/Shared/Components/AdminMenu/Default.cshtml
+++ b/OnlineShop2022/Views/Shared/Components/AdminMenu/Default.cshtml
@@ -8,7 +8,7 @@
         @foreach(var item in Model)
         {
             <li>
-                <a asp-area="Admin" asp-controller="@item.ControllerValue" asp-action="Index" class="dropdown-item">@item.DisplayValue</a>
+                <a asp-area="Admin" asp-controller="@item.ControllerValue" asp-action="Index" class="dropdown-item" id="adminLink">@item.DisplayValue</a>
             </li>
         }
     </ul>
