--- a/OnlineShop2022/Views/Shared/Components/ManagerMenu/Default.cshtml
+++ b/OnlineShop2022/Views/Shared/Components/ManagerMenu/Default.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<OnlineShop2022.Components.ManagerMenuItem>
 
 <li class="nav-item dropdown mx-2">
-    <a asp-controller="Admin" asp-action="Index" class="dropdown-toggle btn btn-outline-light" data-toggle="dropdown" >
+    <a asp-controller="Admin" asp-action="Index" class="dropdown-toggle btn btn-outline-light" data-toggle="dropdown" id="managerLink">
         Manager<b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
         @foreach(var item in Model)
         {
             <li>
-                <a asp-area="Admin" asp-controller="@item.ControllerValue" asp-action="Index" class="dropdown-item" id="managerLink">@item.DisplayValue</a>
+                <a asp-area="Admin" asp-controller="@item.ControllerValue" asp-action="Index" class="dropdown-item">@item.DisplayValue</a>
             </li>
         }
     </ul>
