--- a/OnlineShop2022/Areas/Admin/Views/UserRoles/Manage.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/UserRoles/Manage.cshtml
@@ -15,7 +15,7 @@
                 <div class="form-check">
                     <input type="hidden" asp-for="@Model[i].User.Id"/>
                     <input type="hidden" asp-for="@Model[i].Role.Name"/>
-                    <input class="form-check-input" type="checkbox" asp-for="@Model[i].IsInRole">
+                    <input class="form-check-input" type="checkbox" id="@Model[i].Role.Name" asp-for="@Model[i].IsInRole">
                     <label class="form-check-label">
                         @Model[i].Role.Name
                     </label>
@@ -23,7 +23,7 @@
             }
         </div>
         <div class="card-footer">
-            <button class="btn btn-secondary" type="submit">Update</button>
+            <button class="btn btn-secondary" id="update" type="submit">Update</button>
             <a class="btn btn-danger" asp-action="Index">Cancel</a>
         </div>
     </div>
