--- a/OnlineShop2022/Areas/Admin/Views/UserRoles/Index.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/UserRoles/Index.cshtml
@@ -25,7 +25,7 @@
                 <td>@user.User.Id</td>
                 <td>@user.User.Fname</td>
                 <td>@user.User.Sname</td>
-                <td>@string.Join(" , ", user.Roles.ToList())</td>
+                <td id="roles">@string.Join(" , ", user.Roles.ToList())</td>
                 <td>
                     <a class="btn btn-secondary" asp-action="Manage" asp-route-id="@user.User.Id" id="manageButton">Manage Roles</a>
                 </td>
