Selenium Tests for Product Display
Two Selenium Tests, each relating to the retrieval of Products on the main Index page.

ProductsDisplayedOnLoad() is used to check all products are returned upon Login.
To achieve this, IDs had to be added to the Home MVC. Test passed first try.

ProductDescriptionsDisplayed() is used to check the correct description is shown for each product.
Test Failed, 'Product.Desciption' was called as plaintext instead of a model reference. This was amended, and now test passes

--- a/OnlineShop2022/Views/Home/Index.cshtml
+++ b/OnlineShop2022/Views/Home/Index.cshtml
@@ -9,12 +9,12 @@
         foreach (var product in Model)
         {
             <div class="col-md-4">
-                <div class="card">
-                    <img src="@product.ImagePath" class="card-img-top img-product-main" alt="@product.">
+                <div class="card" id="product @product.Id">
+                    <img src="@product.ImagePath" class="card-img-top img-product-main" id="product @product.Id img" alt="@product.">
                     <div class="card-body">
-                        <p class="card-text">product.Description</p>
-                         <p class="card-text">£@product.Price</p>
-                           <a class="btn btn-primary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart" asp-route-ProductId="@product.Id">Add to cart</a>
+                        <p class="card-text" id="product @product.Id desc">@product.Description</p>
+                         <p class="card-text" id="product @product.Id price">£@product.Price</p>
+                           <a class="btn btn-primary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart" id="@product.Id button" asp-route-ProductId="@product.Id">Add to cart</a>
                     </div>
                 </div>
             </div>
