--- a/OnlineShop2022/Views/Shared/_LoginPartial.cshtml
+++ b/OnlineShop2022/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,7 @@
     {
          currentUser = await UserManager.FindByEmailAsync(User.Identity.Name);
         <li class="nav-item mx-2">
-            <a class="btn btn-outline-light" asp-area="" asp-controller="Home" asp-action="Privacy" class="btn btn-outline-light ">Browse</a>
+            <a class="btn btn-outline-light" id="Browse" asp-area="" asp-controller="Home" asp-action="Products" class="btn btn-outline-light ">Browse</a>
         </li>
          
         <li  class="nav-item mx-2">
