--- a/OnlineShop2022/Areas/Admin/Views/Category/Index.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/Category/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Category Management</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="Create" id="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
