--- a/OnlineShop2022/Areas/Admin/Views/Product/Index.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/Product/Index.cshtml
@@ -7,7 +7,7 @@
 }
 <h1>Product Management</h1>
 
- <a class="btn btn-primary mb-3" asp-action="Create">Add Product</a>
+ <a class="btn btn-primary mb-3" id="Create" asp-action="Create">Add Product</a>
 
 <table class="table table-striped">
     <thead>
