--- a/OnlineShop2022/Areas/Admin/Views/Product/Create.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/Product/Create.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="Product.ImagePath" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <button class="btn btn-primary" type="submit">Add Product</button>
+                <button class="btn btn-primary" id="Submit" type="submit">Add Product</button>
             </div>
         </div>
     </form>
