--- a/OnlineShop2022/Areas/Admin/Views/Product/Update.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/Product/Update.cshtml
@@ -30,7 +30,7 @@
                 <input class="form-control" asp-for="Product.ImagePath" type="file" id="formFile" name="Product.ImagePath">
             </div>
             <div class="mb-3">
-                <button class="btn btn-secondary" type="submit">Update Role</button>
+                <button class="btn btn-secondary" id="Submit" type="submit">Update Product</button>
             </div>
         </div>
     </form>
