--- a/OnlineShop2022/Areas/Admin/Views/Order/Delete.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/Order/Delete.cshtml
@@ -63,7 +63,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="OrderId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a class="btn btn-danger" asp-action="Home">Back to List</a>
+        <input type="submit" id="Delete" value="Delete" class="btn btn-danger" /> |
+        <a class="btn btn-danger" asp-action="Index">Back to List</a>
     </form>
 </div>
