--- a/OnlineShop2022/Areas/Admin/Views/Order/Index.cshtml
+++ b/OnlineShop2022/Areas/Admin/Views/Order/Index.cshtml
@@ -6,6 +6,7 @@
 
 
 <h1>Order Management</h1>
+<a asp-action="UpdateStatus" class="btn btn-danger">Update</a>
 
 <table class="table">
     <thead>
@@ -38,7 +39,7 @@
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OrderStatus)
+               Delivery Status
             </th>
             <th></th>
         </tr>
@@ -80,7 +81,6 @@
                 <a asp-action="Edit" asp-route-id="@item.OrderId" class="btn btn-secondary">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.OrderId" class="btn btn-secondary">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.OrderId" class="btn btn-danger">Delete</a>
-                <a asp-action="UpdateStatus" class="btn btn-danger">Update</a>
             </td>
         </tr>
 }
